# embodied-ai-toolkit

./: .gitignore  .gitmodules  Dockerfile  README.md  README_sim.md  example_config.json  joint_streamer.py  main.py  pyproject.toml  robot_rerun_visualizer.py  streamer.py
embodied_lerobot/: embodied_lerobot_record.py
embodied_lerobot/robots/urdf_follower/: __init__.py  config_urdf_follower.py  urdf_follower.py
embodied_lerobot/teleoperators/urdf_leader/: __init__.py  config_urdf_leader.py  urdf_leader.py
protos/: api.proto
rs_adapters/: .gitignore  Cargo.toml
rs_adapters/src/: main.rs
schema/: config.example.json  config.schema.json  example_config.json  robot.example.json  robot_action.example.json  robot_observation.example.json  teleoperator.example.json
src/: api_pb2.py  api_pb2_grpc.py  data_collection_adapter.py  flask_api_server.py  joint_state_adapter.py  joint_state_adapter_ros2.py  joint_state_schema.json  load_test.bash  main.py  motion_smoother.py  robot_server.py  robot_visualizer.py  robot_websocket_adapter.py  robot_websocket_adapter_ros2.py  robot_websocket_adapter_ros2_controller.py  robot_websocket_adapter_ros2_smoother.py  utils.py  websocket_api_server.py
streamer/: Cargo.toml
streamer/src/: main.rs
