[project]
name = "humanoid-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "ffmpeg>=1.4",
    "flask>=3.1.1",
    "pyglet<2",
    "rerun-sdk>=0.24.1",
    "robot-descriptions>=1.20.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
    "viser==1.0.1",
]
