[project]
name = "embodied-ai-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.74.0",
    "grpcio-reflection>=1.74.0",
    "grpcio-tools>=1.74.0",
    "protobuf>=6.32.0",
    "robot-descriptions>=1.20.0",
    "tyro>=0.9.28",
    "viser==1.0.1",
    "yourdfpy>=0.0.58",
]
