[package]
name = "streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
rerun = "0.24.1"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
image = "0.25"
imageproc = "0.23"
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] }
rusttype = "0.9"
